--- a/pom.xml
+++ b/pom.xml
@@ -69,19 +69,6 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>org.seasar.dbflute</groupId>
-        <artifactId>maven-dbflute-plugin</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
-        <configuration>
-          <dbfluteVersion>0.9.4.1</dbfluteVersion>
-          <rootPackage>org.seasar.robot</rootPackage>
-          <dbPackage>org.seasar.robot.db</dbPackage>
-          <schemaName>robot</schemaName>
-          <schemaFile>${basedir}/dbflute/schema/project-schema-robot.xml</schemaFile>
-          <databaseUrl>jdbc:h2:file:${basedir}/src/main/db/robot</databaseUrl>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
   <pluginRepositories>
@@ -105,11 +92,6 @@
   </repositories>
   <dependencies>
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>1.1.111</version>
-    </dependency>
-    <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-j2ee_1.4_spec</artifactId>
       <version>1.0</version>
@@ -119,21 +101,25 @@
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-annotation_1.0_spec</artifactId>
       <version>1.0</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-ejb_3.0_spec</artifactId>
       <version>1.0</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-interceptor_3.0_spec</artifactId>
       <version>1.0</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-jta_1.1_spec</artifactId>
       <version>1.0</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
@@ -159,11 +145,6 @@
       <groupId>xalan</groupId>
       <artifactId>xalan</artifactId>
       <version>2.7.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.seasar.dbflute</groupId>
-      <artifactId>dbflute-runtime</artifactId>
-      <version>0.9.4.1</version>
     </dependency>
     <dependency>
       <groupId>org.seasar.container</groupId>
