- updated eclipse files - added xpath transformer - updated pom
git-svn-id: https://www.seasar.org/svn/sandbox/s2robot/trunk/s2robot@21 a24fa471-b002-4554-a963-9a0eab8552e2

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <projectDescription>
   <name>s2-robot</name>
-  <comment/>
+  <comment>S2Robot is a crawler framework for Seasar2.</comment>
   <projects/>
   <buildSpec>
     <buildCommand>
