--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,11 @@
       <url>http://download.java.net/maven/1</url>
       <layout>legacy</layout>
     </repository>
+    <repository>
+      <id>fess.sourceforge.jp</id>
+      <name>Fess Repository</name>
+      <url>http://fess.sourceforge.jp/repository/</url>
+    </repository>
   </repositories>
   <dependencies>
     <dependency>
@@ -274,14 +279,9 @@
       <version>2.4</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.tika</groupId>
-      <artifactId>tika-parsers</artifactId>
-      <version>0.4</version>
-    </dependency>
-    <dependency>
       <groupId>net.sourceforge.nekohtml</groupId>
       <artifactId>nekohtml</artifactId>
-      <version>1.9.12</version>
+      <version>1.9.13</version>
     </dependency>
     <dependency>
       <groupId>xalan</groupId>
@@ -291,23 +291,28 @@
     <dependency>
       <groupId>org.seasar.container</groupId>
       <artifactId>s2-tiger</artifactId>
-      <version>2.4.38</version>
+      <version>2.4.39</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.5.6</version>
+      <version>1.5.8</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <version>1.5.6</version>
+      <version>1.5.8</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-parsers</artifactId>
+      <version>0.5-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
