--- a/pom.xml
+++ b/pom.xml
@@ -312,7 +312,17 @@
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
-      <version>0.5-SNAPSHOT</version>
+      <version>0.5-20091008</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>pdfbox</artifactId>
+      <version>0.8.0-20091008</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>fontbox</artifactId>
+      <version>1.0-20091008</version>
     </dependency>
   </dependencies>
 </project>
